# ndi-to-sharedtexture

./: .gitignore  CHANGELOG.md  Cargo.toml  README.en.md  README.ja.md  README.md  THIRD-PARTY-NOTICES  build.rs  release-please-config.json
.github/workflows/: ci.yml  release.yml  windows.yml
docs/superpowers/plans/: 2026-06-28-ndi-share-gui-v2.md  2026-06-28-ndi-share-gui.md  2026-06-29-src-refactor.md  2026-06-30-gui-contextual-status.md
docs/superpowers/specs/: 2026-06-28-ndi-share-gui-design.md  2026-06-28-ndi-share-gui-v2-design.md  2026-06-29-src-refactor-design.md
scripts/: fetch-fonts.sh  fetch-spout2.ps1  install-ndi-sdk.ps1
src/: cli.rs  lib.rs  main.rs  run.rs
src/ndi/: dll.rs  mod.rs  sys.rs
src/output/: mod.rs  spout.rs
