[package]
name = "bucatini"
version = "0.3.0"
edition = "2021"
description = "Receive an NDI source and republish it as a Syphon Metal texture (macOS)"

[features]
default = []
gui = ["dep:eframe", "dep:tray-icon"]

[[bin]]
name = "bucatini"
path = "src/main.rs"

[[bin]]
name = "bucatini-gui"
path = "src/bin/gui.rs"
required-features = ["gui"]

[lib]
name = "bucatini"
path = "src/lib.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
anyhow = "1"
eframe = { version = "0.35", optional = true }
tray-icon = { version = "0.24", optional = true }

[build-dependencies]
cc = "1"

[dev-dependencies]
rusty-hook = "0.11"
